Add css, html in main and in app-routing.module.ts insert immport andpath

--- a/frontend/help-chef/src/app/main/main.component.html
+++ b/frontend/help-chef/src/app/main/main.component.html
@@ -1,1 +1,22 @@
-<p>main works!</p>
+<section class="colored-section" id="title">
+  <div class="container">
+    <!-- The First Section -->
+    <section class="section-one">
+      <div class="front">
+        <h1 class="front-heading">
+          <span class="heading-one">Breakfast</span>
+          <span class="heading-two">Soups</span>
+          <span class="heading-three">Appetizers</span>
+          <span class="heading-four">Desserts</span>
+          <span class="heading-five">Dinner</span>
+        </h1>
+        <p class="front-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <button class="front-btn">Sign up now</button>
+      </div>
+    </section>
+
+    <!-- The End of the First Section -->
+  </div>
+</section>
