Add css to button, paragraph and heading

--- a/frontend/help-chef/src/app/main/main.component.html
+++ b/frontend/help-chef/src/app/main/main.component.html
@@ -10,10 +10,8 @@
           <span class="heading-four">Desserts</span>
           <span class="heading-five">Dinner</span>
         </h1>
-        <p class="front-paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-        <button class="front-btn">Sign up now</button>
+        <p class="front-paragraph">“You are what you eat.”</p>
+        <button class="front-btn">Sign up</button>
       </div>
     </section>
 
