--- a/frontend/help-chef/src/app/main/main.component.css
+++ b/frontend/help-chef/src/app/main/main.component.css
@@ -18,7 +18,7 @@ html {
 .section-one {
   width: 100%;
   height: 100vh;
-  background-color: 393e46;
+  background-color: #393e46;
   background-size: cover;
   position: relative;
 }
@@ -30,5 +30,45 @@ html {
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
+}
+
+.front-heading {
+  margin-bottom: 4rem;
+  height: 15rem;
+}
+
+.front-heading span {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #00adb5;
+  text-shadow: 0.3rem 0.3rem 0.6rem rgba(0, 0, 0, 0.5);
+}
+
+.front-paragraph {
+  font-size: 2rem;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 30%;
+  margin: 0 auto 2rem auto;
+  padding: 1rem 0;
+  box-shadow: 1rem 1rem 5rem rgba(0, 0, 0, 0.5);
+}
+
+.front-btn {
+  width: 15rem;
+  height: 6rem;
+  background: linear-gradient(to right, #00adb5, #1684a7);
+  color: #fff;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border-radius: 3rem;
+  border: 0.1rem solid #00337c;
+  box-shadow: 1rem 2rem 3rem rgba(0, 0, 0, 0.5);
+  text-shadow: 0.3rem 0.2rem 0.1rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
 }
 /* The End of the First Section */
