--- a/frontend/help-chef/src/app/main/main.component.css
+++ b/frontend/help-chef/src/app/main/main.component.css
@@ -23,6 +23,14 @@ html {
   position: relative;
 }
 
+.front-image {
+  width: 100%;
+  height: 100vh;
+  background-color: #393e46;
+  background-size: cover;
+  position: relative;
+}
+
 .front {
   width: 100%;
   position: absolute;
@@ -59,7 +67,7 @@ html {
 }
 
 .front-btn {
-  width: 15rem;
+  width: 18rem;
   height: 6rem;
   background: linear-gradient(to right, #00adb5, #1684a7);
   color: #fff;
