--- a/frontend/help-chef/src/app/main/main.component.html
+++ b/frontend/help-chef/src/app/main/main.component.html
@@ -2,6 +2,11 @@
   <div class="container">
     <!-- The First Section -->
     <section class="section-one">
+      <img
+        class="front-image"
+        src="assets/images/vector-cooking-set.png"
+        alt="Picture of cooking set"
+      />
       <div class="front">
         <h1 class="front-heading">
           <span class="heading-one">Breakfast</span>
