--- a/frontend/help-chef/src/app/add-recipe/add-recipe.component.html
+++ b/frontend/help-chef/src/app/add-recipe/add-recipe.component.html
@@ -1,1 +1,18 @@
-<p>add-recipe works!</p>
+<!-- Navbar -->
+<nav class="navbar">
+  <div class="logo"><span>H</span>elp<span>c</span>hef</div>
+  <div class="nav-list">
+    <a href="#" class="nav-link"> Strona główna</a>
+    <a href="#" class="nav-link"> Konto</a>
+    <a href="#" class="nav-link"> Przepisy</a>
+  </div>
+</nav>
+<!-- The End of Navbar -->
+
+<!-- Menu -->
+<div class="menu">
+  <div class="line line-1"></div>
+  <div class="line line-2"></div>
+  <div class="line line-3"></div>
+</div>
+<!-- The End of Menu -->
