--- a/frontend/help-chef/src/app/main/main.component.html
+++ b/frontend/help-chef/src/app/main/main.component.html
@@ -2,10 +2,30 @@
   <div class="container">
     <!-- The First Section -->
     <section class="section-one">
+      <!-- Navbar -->
+      <nav class="navbar">
+        <div class="logo"><span>H</span>elp<span>c</span>hef</div>
+        <div class="nav-list">
+          <a href="#" class="nav-link"> Strona główna</a>
+          <a href="#" class="nav-link"> Konto</a>
+          <a href="#" class="nav-link"> Przepisy</a>
+          <a href="#" class="nav-link"> Zaloguj się</a>
+        </div>
+      </nav>
+      <!-- The End of Navbar -->
+
+      <!-- Menu -->
+      <div class="menu">
+        <div class="line line-1"></div>
+        <div class="line line-2"></div>
+        <div class="line line-3"></div>
+      </div>
+      <!-- The End of Menu -->
+
       <img
         class="front-image"
         src="assets/images/vector-cooking-set.png"
-        alt="Picture of cooking set"
+        alt="Picture ofa cooking set"
       />
       <div class="front">
         <h1 class="front-heading">
