Add routerLink for all the pages and basic CSS

--- a/frontend/help-chef/src/app/add-recipe/add-recipe.component.html
+++ b/frontend/help-chef/src/app/add-recipe/add-recipe.component.html
@@ -2,9 +2,10 @@
 <nav class="navbar">
   <div class="logo"><span>H</span>elp<span>c</span>hef</div>
   <div class="nav-list">
-    <a href="#" class="nav-link"> Strona główna</a>
-    <a href="#" class="nav-link"> Konto</a>
-    <a href="#" class="nav-link"> Przepisy</a>
+    <a routerLink="/main" class="nav-link"> Strona główna</a>
+    <a routerLink="/account" class="nav-link"> Konto</a>
+    <a routerLink="/add-recipe" class="nav-link"> Przepisy</a>
+    <a routerLink="/login" class="nav-link"> Zaloguj się</a>
   </div>
 </nav>
 <!-- The End of Navbar -->
