--- a/frontend/help-chef/src/app/add-recipe/add-recipe.component.css
+++ b/frontend/help-chef/src/app/add-recipe/add-recipe.component.css
@@ -47,7 +47,7 @@ html {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 3.5rem;
   font-weight: bold;
-  color: #9e0e09;
+  color: #00adb5;
 }
 
 .nav-list {
@@ -79,7 +79,7 @@ html {
 }
 
 .nav-link:hover {
-  color: #9e0e09;
+  color: #00adb5;
 }
 
 /* The End of Navbar */
