--- a/frontend/help-chef/src/app/login/login.component.html
+++ b/frontend/help-chef/src/app/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<!-- Navbar -->
+<nav class="navbar">
+  <div class="logo"><span>H</span>elp<span>c</span>hef</div>
+  <div class="nav-list">
+    <a routerLink="/main" class="nav-link"> Strona główna</a>
+    <a routerLink="/account" class="nav-link"> Konto</a>
+    <a routerLink="/add-recipe" class="nav-link"> Przepisy</a>
+    <a routerLink="/login" class="nav-link"> Zaloguj się</a>
+  </div>
+</nav>
+<!-- The End of Navbar -->
+
+<!-- Menu -->
+<div class="menu">
+  <div class="line line-1"></div>
+  <div class="line line-2"></div>
+  <div class="line line-3"></div>
+</div>
+<!-- The End of Menu -->
