Add login page to the project

--- a/frontend/help-chef/src/app/login/login.component.html
+++ b/frontend/help-chef/src/app/login/login.component.html
@@ -17,3 +17,17 @@
   <div class="line line-3"></div>
 </div>
 <!-- The End of Menu -->
+<!-- Login -->
+<div class="login-page">
+  <div class="login-page-info">
+    <form class="login-page-form">
+      <input type="text" class="form-login-input" placeholder="Email lub numer telefonu">
+      <input type="password" class="form-login-input">
+      <input type="button" class="form-login-btn" value="Zaloguj się">
+      <a href="#" class="form-login-link"> Nie możesz się zalogować?</a> <span>lub</span>
+      <input type="button" class="form-signup-btn" value="Stwórz konto">
+
+    </form>
+  </div>
+</div>
+<!-- The End of Login-->
