--- a/frontend/help-chef/src/app/login/login.component.css
+++ b/frontend/help-chef/src/app/login/login.component.css
@@ -17,7 +17,7 @@ html {
 /* Navbar */
 .navbar {
   width: 100%;
-  height: 8rem;
+  height: 3rem;
   background-color: rgba(0, 0, 0, 0.6);
   position: fixed;
   top: 0;
@@ -112,3 +112,103 @@ html {
   margin-left: auto;
 }
 /* The End of Menu */
+
+/* The Login */
+.login-page{
+  width: 100%;
+  height: 100vhn;
+  position: relative;
+}
+.login-page-form{
+  position: absolute;
+  top:12%;
+  left:50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 0.1rem solid#cfcfcf;
+  padding: 3rem;
+}
+
+.login-page-form input{
+  width: 35rem;
+  height: 5rem;
+  margin: 1rem;
+  border-radius:  0.5rem;
+}
+
+.form-login-input {
+padding:0 1.5rem;
+border: 0.1rem solid #00adb5;
+font-size: 1.6rem;
+}
+
+.form-login-btn {
+  width: 10rem;
+  height: 4rem;
+  background: linear-gradient(to right, grey, #52595b);
+  color: #fff;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border-radius: 3rem;
+  border: 0.1rem solid #00337c;
+  box-shadow: 1rem 2rem 3rem rgba(0, 0, 0, 0.5);
+  text-shadow: 0.3rem 0.2rem 0.1rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+}
+
+.form-login-link {
+  font-size: 1.8rem;
+  color: #00adb5;
+  margin: 1.2rem 0 1.2rem 0;
+}
+
+.login-page-form span {
+  width: 2rem;
+  font-size: 2rem;
+  color: grey;
+  margin: 1rem 0;
+  position:relative;
+}
+
+.login-page-form span::before{
+  content:"";
+  width:16rem;
+  height:0.1rem;
+  background-color: #cfcfcf;
+  position:absolute;
+  top: 50%;
+  right:3.5rem;
+  transform:translateY(-50%)
+}
+
+.login-page-form span::after{
+  content:"";
+  width:16rem;
+  height:0.1rem;
+  background-color: #cfcfcf;
+  position:absolute;
+  top: 50%;
+  left:3.5rem;
+  transform:translateY(-50%)
+}
+
+.form-signup-btn {
+  width: 10rem;
+  height: 4rem;
+  background: linear-gradient(to right, #00adb5, #1684a7);
+  color: #fff;
+  font-size: 2rem;
+  text-transform: uppercase;
+  border-radius: 3rem;
+  border: 0.1rem solid #00337c;
+  box-shadow: 1rem 2rem 3rem rgba(0, 0, 0, 0.5);
+  text-shadow: 0.3rem 0.2rem 0.1rem rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+
+}
+
+
+
+/* The End of Login */
