--- a/frontend/help-chef/src/app/main/main.component.html
+++ b/frontend/help-chef/src/app/main/main.component.html
@@ -29,13 +29,13 @@
       />
       <div class="front">
         <h1 class="front-heading">
-          <span class="heading-one">Breakfast</span>
-          <span class="heading-two">Soups</span>
-          <span class="heading-three">Appetizers</span>
-          <span class="heading-four">Desserts</span>
-          <span class="heading-five">Dinner</span>
+          <span class="heading-one">Śniadania</span>
+          <span class="heading-two">Zupy</span>
+          <span class="heading-three">Przystawki</span>
+          <span class="heading-four">Desery</span>
+          <span class="heading-five">Kolacje</span>
         </h1>
-        <p class="front-paragraph">“You are what you eat.”</p>
+        <p class="front-paragraph">“Jesteś tym co jesz.”</p>
         <a routerLink="/sign-up"><button class="front-btn">Sign up</button></a>
       </div>
     </section>
