--- a/frontend/help-chef/src/app/add-recipe/add-recipe.component.css
+++ b/frontend/help-chef/src/app/add-recipe/add-recipe.component.css
@@ -112,3 +112,21 @@ html {
   margin-left: auto;
 }
 /* The End of Menu */
+
+.recipesTable{
+  table-layout: fixed;
+  width: 100%;
+  padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.menuSpace{
+  margin-top: 150px;
+}
+
+td, th {
+  border: 2px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
