--- a/frontend/help-chef/src/app/add-recipe/add-recipe.component.html
+++ b/frontend/help-chef/src/app/add-recipe/add-recipe.component.html
@@ -21,20 +21,21 @@
 <div class="container">
   <div class="card">
     <div class="card-body">
-      <table *ngFor = "let recipe of recipes" class="table table-striped">
+      <table class="table table-striped">
         <thead>
           <th>Nazwa przepisu</th>
           <th>Ocena</th>
           <th></th>
         </thead>
         <tbody>
-          <tr>
+          <tr *ngFor = "let recipe of recipes">
             <td>{{recipe.recipeName}}</td>
             <td>{{recipe.rate}}</td>
-            <td><a routerLink="/recipeDetails">Szczegóły</a></td>
+            <td><button (click) = "recipeDetails(recipe.recipeId)"> Szczegóły </button></td>
           </tr>
         </tbody>
       </table>
+    
     </div>
   </div>
 </div>
